<?xml version="1.0" encoding="utf-8"?>
<!--
    Tela inicial do MineDrakk.

    Reorganizada em relacao ao layout herdado do PojavLauncher/Amethyst, onde os
    atalhos ocupavam o centro da tela em uma lista vertical de botoes largos e o
    perfil selecionado ficava espremido numa barra estreita embaixo, com a mesma
    importancia visual de um item de menu.

    A pergunta central desta tela e "o que eu vou jogar agora", entao o perfil
    ativo virou um cartao de destaque logo abaixo da marca, junto do botao
    JOGAR. Os atalhos, que sao acoes ocasionais, viraram blocos menores em
    grade, ocupando menos peso visual.
-->
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/fragment_menu_main"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/background_app">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:clipToPadding="false"
		android:paddingBottom="@dimen/_8sdp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toTopOf="@id/play_button">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingHorizontal="@dimen/_12sdp">

			<!-- Identidade MineDrakk -->
			<ImageView
				android:id="@+id/brand_wordmark"
				android:layout_width="0dp"
				android:layout_height="@dimen/_34sdp"
				android:layout_marginTop="@dimen/_12sdp"
				android:layout_marginHorizontal="@dimen/_40sdp"
				android:adjustViewBounds="true"
				android:scaleType="fitCenter"
				android:src="@drawable/ic_minedrakk_wordmark"
				android:contentDescription="@string/app_name"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent" />

			<!--
			     Resumo do estado do aparelho (RAM, runtime Java e renderizador).
			     Antes essas informacoes so apareciam no log depois de o jogo abrir.
			-->
			<TextView
				android:id="@+id/launcher_status_chip"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_6sdp"
				android:background="@drawable/background_status_chip"
				android:paddingHorizontal="@dimen/_10sdp"
				android:paddingVertical="@dimen/_5sdp"
				android:textColor="@color/brand_primary_light"
				android:textSize="@dimen/_9ssp"
				android:gravity="center"
				android:maxLines="2"
				tools:text="3328 MB (auto) - Java 21 - MobileGlues"
				app:layout_constraintTop_toBottomOf="@id/brand_wordmark"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent" />

			<!-- ============ Cartao do perfil ativo ============ -->
			<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/profile_card"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_14sdp"
				android:background="@drawable/background_hero_card"
				android:paddingHorizontal="@dimen/_12sdp"
				android:paddingVertical="@dimen/_10sdp"
				app:layout_constraintTop_toBottomOf="@id/launcher_status_chip">

				<TextView
					android:id="@+id/profile_card_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/launcher_selected_profile"
					android:textColor="@color/tertiary_text"
					android:textSize="@dimen/_8ssp"
					android:textAllCaps="true"
					android:letterSpacing="0.08"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintStart_toStartOf="parent" />

				<!-- O spinner mantem a implementacao existente: ele carrega os
				     perfis, desenha o icone e abre a lista suspensa. Aqui muda
				     apenas onde ele fica e o espaco que recebe. -->
				<com.kdt.mcgui.mcVersionSpinner
					android:id="@+id/mc_version_spinner"
					android:layout_width="0dp"
					android:layout_height="@dimen/_50sdp"
					android:background="@android:color/transparent"
					android:drawableEnd="@drawable/spinner_arrow"
					app:drawableEndSize="@dimen/padding_heavy"
					app:drawableStartIntegerScaling="true"
					app:drawableStartSize="@dimen/_36sdp"
					app:drawableEndPadding="@dimen/_1sdp"
					app:layout_constraintTop_toBottomOf="@id/profile_card_label"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toStartOf="@id/edit_profile_button" />

				<ImageButton
					android:id="@+id/edit_profile_button"
					android:layout_width="@dimen/_42sdp"
					android:layout_height="@dimen/_42sdp"
					android:background="?android:attr/selectableItemBackgroundBorderless"
					android:src="@drawable/ic_edit_profile"
					android:contentDescription="@string/profiles_profile_name"
					app:layout_constraintTop_toTopOf="@id/mc_version_spinner"
					app:layout_constraintBottom_toBottomOf="@id/mc_version_spinner"
					app:layout_constraintEnd_toEndOf="parent" />
			</androidx.constraintlayout.widget.ConstraintLayout>

			<!-- ============ Atalhos em grade ============ -->
			<androidx.constraintlayout.widget.Guideline
				android:id="@+id/center_guideline"
				android:layout_width="0dp"
				android:layout_height="0dp"
				android:orientation="vertical"
				app:layout_constraintGuide_percent="0.5" />

			<TextView
				android:id="@+id/shortcuts_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_16sdp"
				android:layout_marginBottom="@dimen/_8sdp"
				android:text="@string/launcher_shortcuts"
				android:textColor="@color/tertiary_text"
				android:textSize="@dimen/_8ssp"
				android:textAllCaps="true"
				android:letterSpacing="0.08"
				app:layout_constraintTop_toBottomOf="@id/profile_card"
				app:layout_constraintStart_toStartOf="parent" />

			<com.kdt.mcgui.LauncherMenuButton
				android:id="@+id/custom_control_button"
				style="@style/LauncherShortcutTile"
				android:layout_marginEnd="@dimen/_4sdp"
				android:drawableStart="@drawable/ic_menu_custom_controls"
				android:text="@string/mcl_option_customcontrol"
				app:layout_constraintTop_toBottomOf="@id/shortcuts_label"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toStartOf="@id/center_guideline" />

			<com.kdt.mcgui.LauncherMenuButton
				android:id="@+id/install_jar_button"
				style="@style/LauncherShortcutTile"
				android:layout_marginStart="@dimen/_4sdp"
				android:drawableStart="@drawable/ic_menu_install_jar"
				android:text="@string/main_install_jar_file"
				app:layout_constraintTop_toBottomOf="@id/shortcuts_label"
				app:layout_constraintStart_toStartOf="@id/center_guideline"
				app:layout_constraintEnd_toEndOf="parent" />

			<com.kdt.mcgui.LauncherMenuButton
				android:id="@+id/open_files_button"
				style="@style/LauncherShortcutTile"
				android:layout_marginEnd="@dimen/_4sdp"
				android:layout_marginTop="@dimen/_8sdp"
				android:drawableStart="@drawable/ic_folder"
				android:text="@string/mcl_button_open_directory"
				app:layout_constraintTop_toBottomOf="@id/custom_control_button"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toStartOf="@id/center_guideline" />

			<com.kdt.mcgui.LauncherMenuButton
				android:id="@+id/share_logs_button"
				style="@style/LauncherShortcutTile"
				android:layout_marginStart="@dimen/_4sdp"
				android:layout_marginTop="@dimen/_8sdp"
				android:drawableStart="@android:drawable/ic_menu_share"
				android:text="@string/main_share_logs"
				app:layout_constraintTop_toBottomOf="@id/install_jar_button"
				app:layout_constraintStart_toStartOf="@id/center_guideline"
				app:layout_constraintEnd_toEndOf="parent" />

			<!-- ============ Links ============ -->
			<com.kdt.mcgui.LauncherMenuButton
				android:id="@+id/news_button"
				style="@style/LauncherShortcutTile.Link"
				android:layout_marginTop="@dimen/_12sdp"
				android:layout_marginEnd="@dimen/_4sdp"
				android:drawableStart="@drawable/ic_menu_news"
				android:text="@string/mcl_tab_wiki"
				app:layout_constraintTop_toBottomOf="@id/open_files_button"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toStartOf="@id/center_guideline" />

			<com.kdt.mcgui.LauncherMenuButton
				android:id="@+id/discord_button"
				style="@style/LauncherShortcutTile.Link"
				android:layout_marginTop="@dimen/_12sdp"
				android:layout_marginStart="@dimen/_4sdp"
				android:drawableStart="@drawable/ic_github"
				android:text="@string/mcl_button_discord"
				app:layout_constraintTop_toBottomOf="@id/share_logs_button"
				app:layout_constraintStart_toStartOf="@id/center_guideline"
				app:layout_constraintEnd_toEndOf="parent" />
		</androidx.constraintlayout.widget.ConstraintLayout>
	</ScrollView>

	<!-- Barra inferior fixa, so com o botao JOGAR -->
	<View
		android:id="@+id/_background_display_view"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:background="@color/background_bottom_bar"
		android:translationZ="-1dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintTop_toTopOf="@id/play_button" />

	<com.kdt.mcgui.MineButton
		android:id="@+id/play_button"
		android:layout_width="match_parent"
		android:layout_height="@dimen/_62sdp"
		android:layout_marginHorizontal="@dimen/_17sdp"
		android:layout_marginTop="@dimen/_10sdp"
		android:layout_marginBottom="@dimen/_15sdp"
		android:textAllCaps="true"
		android:text="@string/main_play"
		app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
