<?xml version="1.0" encoding="utf-8"?>
<!--
    Escolha do tipo de conta.

    Antes eram dois botoes sem nenhuma explicacao ("Microsoft Account" e
    "Local account"), com os textos fixos no layout, portanto nunca traduzidos.
    Como a diferenca pratica entre as duas opcoes e justamente o que decide se
    o jogador conseguira entrar em servidores online, cada opcao agora tem uma
    linha dizendo para que serve.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:paddingHorizontal="@dimen/fragment_padding_medium">

    <TextView
        android:id="@+id/auth_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_18sdp"
        android:text="@string/auth_select_title"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toTopOf="@id/card_microsoft"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <!-- Opcao 1: conta Microsoft -->
    <LinearLayout
        android:id="@+id/card_microsoft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_12sdp"
        android:background="@drawable/background_menu_card"
        android:orientation="vertical"
        android:padding="@dimen/_14sdp"
        app:layout_constraintBottom_toTopOf="@id/card_local"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_title">

        <com.kdt.mcgui.MineButton
            android:id="@+id/button_microsoft_authentication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mcl_account_microsoft"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/auth_select_microsoft_subtitle"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_9ssp" />
    </LinearLayout>

    <!-- Opcao 2: conta offline -->
    <LinearLayout
        android:id="@+id/card_local"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_menu_card"
        android:orientation="vertical"
        android:padding="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_microsoft">

        <com.kdt.mcgui.MineButton
            android:id="@+id/button_local_authentication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mcl_account_local"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/auth_select_local_subtitle"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_9ssp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
