<?xml version="1.0" encoding="utf-8"?>
<!--
    Gerenciador de mods do perfil.

    Mostra a pasta de mods REAL do perfil no topo. Isso e proposital: cada
    perfil pode ter seu proprio gameDir, e nao havia nada na interface que
    revelasse isso. Era facil colocar os mods numa pasta e o jogo ler de outra,
    resultando em "o jogo abre sem os mods" sem nenhuma mensagem de erro.
-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:paddingHorizontal="@dimen/_10sdp">

    <TextView
        android:id="@+id/mod_manager_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/mod_manager_title"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/mod_manager_add" />

    <!-- Caminho real da pasta, para o usuario saber onde os mods devem ficar -->
    <TextView
        android:id="@+id/mod_manager_folder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:textColor="@color/tertiary_text"
        android:textSize="@dimen/_8ssp"
        android:maxLines="2"
        android:ellipsize="middle"
        tools:text="custom_instances/meu-modpack/mods"
        app:layout_constraintTop_toBottomOf="@id/mod_manager_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/mod_manager_add" />

    <TextView
        android:id="@+id/mod_manager_summary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:textColor="@color/brand_primary_light"
        android:textSize="@dimen/_9ssp"
        tools:text="12 mods, 10 ativos"
        app:layout_constraintTop_toBottomOf="@id/mod_manager_folder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/mod_manager_add" />

    <com.kdt.mcgui.MineButton
        android:id="@+id/mod_manager_add"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_12sdp"
        android:text="@string/mod_manager_add"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.kdt.mcgui.MineButton
        android:id="@+id/mod_manager_browse"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:paddingHorizontal="@dimen/_12sdp"
        android:text="@string/mod_manager_browse"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintTop_toBottomOf="@id/mod_manager_add"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/mod_manager_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/background_overlay"
        app:layout_constraintTop_toBottomOf="@id/mod_manager_browse" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mod_manager_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingVertical="@dimen/_6sdp"
        app:layout_constraintTop_toBottomOf="@id/mod_manager_divider"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/mod_manager_empty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/mod_manager_empty"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/_10ssp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/mod_manager_divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
